2008-09-24  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: remove THIS_HEADER. Instead 
	everything goes to THIS_SECTION. New function reference, 
	element_heading, to format a node or a section heading, including
	navigation and label. Accordingly, print_Top and one_section don't
	print the element header anymore.
	print_element_header and print_navigation now return their result.
	new argument for print_misc and print_misc_header, the misc page
	name.
	labels and headings appear where the command is, instead of always 
	appearing at the beginning of the elements.

2008-09-23  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl,texi2html.init: do added index pages in 
	texi2html.init. Add an element for an index page only it begins 
	a new file. Avoid changing directions as best as possible, while 
	still linking to the added index element (with Following, Back and 
	Prev). Never consider printindex as elements, but instead put them
	in places.

2008-09-07  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: always use a distinct label for index 
	entries, and use id, target like for other placed items.
	Give more informations for index entry formatting.

2008-09-06  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: when node Top is considered as a @top, don't
	associate the following nodes to it, but rather to the next
	section.
	When there is no section and USE_NODES is not set don't split
	by node.
	Split only by node when USE_SECTIONS is not set and USE_NODES
	is. Default for USE_SECTIONS is 1, and default for USE_NODES
	is now undef.
	When there is no texinfo sectionning element at all or no 
	element for texi2html (for example no section but 
	USE_SECTIONS == 1 and USE_NODES undef).
	always use THIS_SECTION and THIS_HEADER such that formatting
	functions can modify them.
	* texi2html.pl, texi2html.init: progress towards index formatting
	simplification and handling out of the main program.
